name:               parsley-garnish
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD3
license-file:       LICENSE
author:             Jamie Willis, Matthew Pickering
maintainer:         j.willis19@imperial.ac.uk
-- copyright:
-- category:
build-type:         Simple
extra-source-files: ChangeLog.md
cabal-version:      >=1.10

library
  exposed-modules:  Parsley.Garnish,
                    Parsley.LiftPlugin
                    Parsley.OverloadedSyntaxPlugin
  other-modules:    Parsley.LiftPlugin.LiftPlugin
                    Parsley.OverloadedSyntaxPlugin.OverloadedSyntaxPlugin
  build-depends:    base                >= 4.10    && < 5,
                    parsley             >= 0.1     && < 0.2,
                    template-haskell    >= 2.14    && < 3,
                    ghc-tcplugins-extra >= 0.3     && < 0.5,
                    ghc                 >= 8.6     && < 9,
                    syb                 >= 0.7     && < 0.8

  hs-source-dirs:   src
  ghc-options:      -Wall
  default-language: Haskell2010